--- a/maca-electron/package.json
+++ b/maca-electron/package.json
@@ -2,18 +2,21 @@
   "dependencies": {
     "rebuild": "^0.1.2",
     "run": "^1.4.0",
-    "serialport": "^10.5.0"
+    "serialport": "^10.5.0",
+    "tailwind": "^4.0.0"
   },
   "name": "arduino-electron",
   "description": "",
   "version": "1.0.0",
   "main": "main.js",
   "devDependencies": {
-    "electron": "^23.1.3"
+    "electron": "^23.1.3",
+    "nodemon": "^2.0.21"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
+    "start_n": "nodemon --watch **/*.html --exec electron .",
     "rebuild": "electron-rebuild -f -w serialport"
   },
   "repository": {
